@@ -4,5 +4,5 @@
 struct A
 {
     typedef int int T; // { dg-error "two or more data types in declaration" }
-    struct T x[1] = { 0 }; // { dg-error "invalid|forward" }
+    struct T x[1] = { 0 }; // { dg-error "incomplete type|forward" }
 };
